# sample-project-python

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs.yml  release.yml  setup.yml  tests.yml
docs/: index.md
search/: search_index.json
src/sample/: __init__.py  placeholder.py  sample_with_extra_install.py
src/sample/sql/: query1.sql
tests/: test_placeholder.py  test_sample_with_extra_install.py
