[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-project-python"
version = "1.0.0-rc.1"
description = "Sample Python Project"
license = "MIT"
authors = [{name = "Dillon Stadther"}, ]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Documentation = "https://dlstadther.github.io/sample-project-python"
Repository = "https://github.com/dlstadther/sample-project-python"

[project.optional-dependencies]
df = [
    "pandas >= 2.0.0",
]

[dependency-groups]
dev = [
    "mkdocs >=1.6.0,<2",
    "mkdocs-material >=9.4.5,<10",
    "mkdocstrings[python] >=0.25.2,<1",
    "nox >=2024.4.15,<2025",
    "prek >=0.1.0,<1",
    "pytest >=8.3.2,<9",
    "pytest-cov >=5.0.0,<6",
    "python-semantic-release >=10.0.0,<11",
    "ruff >=0.6.2,<1",
    "sqlfluff >=3.1.1,<4",
    "ty >=0.0.11,<1",
]


[tool.hatch.build]
packages = ["src/sample"]


##########
# Coverage
##########
[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
src = ["src"]

[tool.coverage.report]
fail_under = 70
show_missing = true


####
# Ty
####
[tool.ty]


######
# Ruff
######
[tool.ruff]
line-length = 160
# auto-apply changes
#fix = true
#exit-non-zero-on-fix = true

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
]
# check out their meaning here
# https://flake8.pycqa.org/en/latest/user/error-codes.html
# https://www.flake8rules.com/
ignore = [
    "E402",  # Module level import not at top of file
    "E501",  # Line too long (82 > 79 characters)
    # prefer list(), dict(), etc.
    "C408",  # Rewrite as a literal
]


########
# Pytest
########
[tool.pytest.ini_options]
addopts = "--cov=src --strict-markers"
markers = [
    "df: marks tests as requiring the \"df\" extra install (deselect with '-m \"not df\"')",
]
pythonpath = [
  "src"
]


##################
# Semantic Release
##################
[tool.semantic_release]
build_command = """\
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
commit_message = """\
chore: release v{version}

Automatically generated by python-semantic-release
"""
commit_parser = "conventional"
version_toml = [
    # "file:variable:[format_type]"
    "pyproject.toml:project.version:nf",
]
version_variable = [
    # "file:variable:format_type"
    "src/sample/__init__.py:__version__:nf",
    "pyproject.toml:project.version:nf",
]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^Merge",
    "^Revert",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = ""
prerelease = false

# TESTING: Uncomment the section below to allow releases from the current branch
# This makes it easy to test semantic release on any branch.
# To disable, comment out this entire section.
[tool.semantic_release.branches.test]
match = ".*"  # Matches any branch name
prerelease_token = "rc"
prerelease = true

[tool.semantic_release.branches.pre_release]
match = "(pre-.*|beta.*|alpha.*)"
prerelease_token = "rc"
prerelease = true


##########
# Sqlfluff
##########
[tool.sqlfluff.core]
# Supported dialects https://docs.sqlfluff.com/en/stable/dialects.html
dialect = "postgres"
templater = "jinja"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"

# Comma separated list of rules to exclude, or None
# See https://docs.sqlfluff.com/en/stable/configuration.html#enabling-and-disabling-rules
# AM04 (ambiguous.column_count) and ST06 (structure.column_order) are
# two of the more controversial rules included to illustrate usage.
#exclude_rules =

# The standard max_line_length is 80 in line with the convention of
# other tools and several style guides. Many projects however prefer
# something a little longer.
# Set to zero or negative to disable checks.
max_line_length = 120

[tool.sqlfluff.indentation]
indented_ctes = true
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

# The default configuration for aliasing rules is "consistent"
# which will auto-detect the setting from the rest of the file. This
# is less desirable in a new project and you may find this (slightly
# more strict) setting more useful.
[tool.sqlfluff.rules.aliasing.table]
aliasing = "explicit"

[tool.sqlfluff.rules.aliasing.column]
aliasing = "explicit"

[tool.sqlfluff.rules.aliasing.length]
min_alias_length = 3

# The default configuration for capitalisation rules is "consistent"
# which will auto-detect the setting from the rest of the file. This
# is less desirable in a new project and you may find this (slightly
# more strict) setting more useful.
# Typically we find users rely on syntax highlighting rather than
# capitalisation to distinguish between keywords and identifiers.
# Clearly, if your organisation has already settled on uppercase
# formatting for any of these syntax elements then set them to "upper".
# See https://stackoverflow.com/questions/608196/why-should-i-capitalize-my-sql-keywords-is-there-a-good-reason
[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "lower"
